--- a/EscapeRecruitmentRoom/EscapeRecruitmentRoom.Tests/packages.config
+++ b/EscapeRecruitmentRoom/EscapeRecruitmentRoom.Tests/packages.config
@@ -1,7 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Autofac" version="4.9.4" targetFramework="net452" />
+  <package id="CommonServiceLocator" version="2.0.2" targetFramework="net452" />
   <package id="LiteDB" version="4.1.4" targetFramework="net452" />
+  <package id="MvvmLightLibs" version="5.4.1.1" targetFramework="net452" />
   <package id="xunit" version="2.4.1" targetFramework="net452" />
   <package id="xunit.abstractions" version="2.0.3" targetFramework="net452" />
   <package id="xunit.analyzers" version="0.10.0" targetFramework="net452" />
